# LVEZ_ESP

./: .gitignore  CMakeLists.txt  LICENSE.txt  LVEZ_ESP.cpp  LVEZ_ESP.h  README.md  library.json
Arduino/: platformio.ini
Arduino/src/: Ard.ino
pio_file/ESP32/: platformio.ini
pio_file/ESP32/src/: LVEZ.ino
pio_file/ESP8266/: platformio.ini
pio_file/ESP8266/src/: LVEZ.ino
